--- a/shop.html
+++ b/shop.html
@@ -5,6 +5,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="assets/style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="assets/css/all.css" rel="stylesheet">
 </head>
 <body>
 
@@ -90,27 +91,40 @@
 
 <footer class="container">
     <div class="footer_inner">
-        <div class="footer_sec">
-            <h3 class="footer_zag">Покупателям</h3>
+        <div class="wrapper">
+            <div class="footer_sec">
+                <h3 class="footer_zag">Покупателям</h3>
 
-            <ul class="spisok">
-                <li class="el_spiska"><a class="footer_link" href="#">Доставка</a></li>
-                <li class="el_spiska"><a class="footer_link" href="#">Оплата</a></li>
-                <li class="el_spiska"><a class="footer_link" href="#">Возврат товара</a></li>
-                <li class="el_spiska"><a class="footer_link" href="#">Личный кабинет</a></li>
-            </ul>
+                <ul class="spisok">
+                    <li class="el_spiska"><a class="footer_link" href="#">Доставка</a></li>
+                    <li class="el_spiska"><a class="footer_link" href="#">Оплата</a></li>
+                    <li class="el_spiska"><a class="footer_link" href="#">Возврат товара</a></li>
+                    <li class="el_spiska"><a class="footer_link" href="#">Личный кабинет</a></li>
+                </ul>
+            </div>
+
+            <div class="footer_sec">
+                <h3 class="footer_zag">Информация</h3>
+
+                <ul class="spisok">
+                    <li class="el_spiska"><a class="footer_link" href="#">О нас</a> </li>
+                    <li class="el_spiska"><a class="footer_link" href="#">Блог</a></li>
+                    <li class="el_spiska"><a class="footer_link" href="#">Контакты</a></li>
+                    <li class="el_spiska"><a class="footer_link" href="#">Обратная связь</a></li>
+                </ul>
+            </div>
         </div>
 
-        <div class="footer_sec">
-            <h3 class="footer_zag">Информация</h3>
 
-            <ul class="spisok">
-                <li class="el_spiska"><a class="footer_link" href="#">О нас</a> </li>
-                <li class="el_spiska"><a class="footer_link" href="#">Блог</a></li>
-                <li class="el_spiska"><a class="footer_link" href="#">Контакты</a></li>
-                <li class="el_spiska"><a class="footer_link" href="#">Обратная связь</a></li>
-            </ul>
+        <div class="webs">
+
+            <a href="#" class="link"><i class="fab fa-vk"></i></a>
+            <a href="#" class="link"><i class="fab fa-instagram"></i></a>
+            <a href="#" class="link"><i class="fab fa-youtube"></i></a>
         </div>
+
+
+
     </div>
 </footer>
 
